[gd_scene load_steps=2 format=3 uid="uid://5yhp5lfioj2q"]

[ext_resource type="Script" uid="uid://3e1avft3tyur" path="res://scripts/ui/character_info.gd" id="1"]

[node name="CharacterInfo" type="PanelContainer"]
custom_minimum_size = Vector2(220, 0)
offset_right = 220.0
offset_bottom = 180.0
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="CharNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Character Name"
theme_override_font_sizes/font_size = 16

[node name="HPBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 18)
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HPLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "50 / 50"
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1

[node name="EnergyLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Energy: 3 / 3"
theme_override_font_sizes/font_size = 13
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)

[node name="DrawCountLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Draw: 0"
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)

[node name="DiscardCountLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Discard: 0"
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.8, 0.6, 0.6, 1)

[node name="StatusContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 6
